--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: IosevkaNF;
-    src: local("IosevkaNF"), url("../assets/IosevkaNerdFont-Medium.ttf");
+    src: local("IosevkaNF"), url("assets/IosevkaNerdFont-Medium.ttf");
 }
 
 html {
@@ -17,6 +17,26 @@ body {
 }
 
 .vantaBg {
+    position: fixed;
     height: 100vh;
     width: 100vw;
+    right: 0;
+    z-index: -1;
+}
+
+.screen {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    z-index: 2;
+}
+
+#term-window {
+    opacity: 90%;
+    border-radius: 20px;
+    z-index: 2;
+    background-color: #24283b;
+    color: white;
+    height: 80vh;
 }
